Replaced LinkList with ArrayList
git-svn-id: http://isdb1.offis.uni-oldenburg.de/repos/odysseus/trunk@26130 aa0bda67-78ed-0310-a382-c5338b0f89ba

Former-commit-id: 13b9657d9eacde8147bc0933d311d2af3f99070c